<resources>
    <string name="app_name">shoes_app</string>
    <string name="nameApp">ShoeFbee</string>
    <string name="home">Trang chủ</string>
    <string name="favorites">Yêu thích</string>
    <string name="cart">Giỏ hàng</string>
    <string name="orders">Đơn hàng</string>
    <string name="profile">Thông tin</string>
    <string name="hello">Xin chào !</string>
    <string name="updateInfor">Thông tin cá nhân vưừa được cập nhật</string>
    <string name="leaveReview">Đánh giá</string>
    <string name="leaveRate">Viết nhận xét về sản phẩm 🤩</string>
    <string name="detailHistory">Chi tiết đơn hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="filter">Sắp xếp và lọc</string>
    <string name="special_programs">Chương trình đặc biệt</string>
    <string name="tittle_Address">Address Detail</string>
    <string name="most_popular">Phổ biến nhất</string>
    <string name="see_all">Tất cả</string>

    <!--    //quy-->
    <!--    key map-->
    <string name="key_map">AIzaSyCH8B5nvbZwslomTAn6u4-ZGG145XHCXLA</string>
    <!--    string other-->
    <string name="capture">Máy Ảnh</string>
    <string name="selectImg">Chọn Nguồn Ảnh</string>
    <string name="gallery">Thư Viện</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="congratulation">Chào mừng trở lại !</string>
    <string name="force_input_email">Vui lòng nhập email</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="fail_password">Sai tài khoản hoặc mật khẩu</string>
    <string name="accountAlreadyExists">Tài khoản đã tồn tại</string>
    <string name="is_number_phone">Vui lòng nhập đủ số điện thoại</string>
    <string name="error_format_email">Vui lòng nhập đúng dạng email</string>
    <string name="sign_in_to_your_account">Đăng nhập vào tài khoản của bạn</string>
    <string name="name_login">Email Đăng Nhập</string>
    <string name="password">Nhập mật khẩu</string>
    <string name="passwordIncorrect">Nhập mật khẩu không trùng khớp</string>
    <string name="remember">Ghi nhớ</string>
    <string name="login">Đăng nhập</string>
    <string name="login_Success">Đăng nhập thành công</string>
    <string name="new_user">Bạn chưa có tài khoản ?" "</string>
    <string name="sign_in">Đăng ký</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="old_user">Bạn đã có tài khoản ?" "</string>
    <string name="your_email">Nhập email của bạn</string>
    <string name="create_acc">Tạo tài khoản</string>
    <string name="quick_create">Tạo tài khoản nhanh</string>
    <string name="full_name">Nhập vào tên đầy đủ của bạn</string>
    <string name="date">Ngày tháng năm</string>
    <string name="trackOrder">Đặt Ngay</string>
    <string name="orderAgain">Đặt Lại</string>
    <string name="email">you.@gmail.com</string>
    <string name="phone_config">Nhập vào số điện thoại</string>
    <string name="text_continue">Tiếp tục</string>
    <string name="new_address">Tạo Địa Chỉ Mới</string>
    <string name="txt2_custom_dialog">Tài khoản của bạn sẵn sàng sử dụng.Bạn sẽ tiến đến Trang chủ sau giây lát</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="ba_dinh_const">Ba Đình,Hà Nội</string>
    <string name="detail_address">Địa chỉ chi tiết</string>
    <string name="point_name">Tên địa điểm</string>
    <string name="default_address">Đặt làm địa chỉ mặc định</string>
    <string name="add">Thêm</string>
    <string name="no_find_address">Không Tìm Được Địa Chỉ Trùng Khớp</string>
    <string name="success">Thành công</string>
    <string name="inputFullInfo">Vui lòng nhập đầy đủ thông tin</string>
    <string name="pleaseOTP">Vui lòng nhập mã OTP</string>
    <string name="create_your_password">Tạo mật khẩu mới của bạn</string>
    <string name="update">Cập nhật</string>
    <string name="general_notification">Thông báo</string>
    <string name="helpCenter">Trung tâm hỗ trợ</string>
    <string name="sound">Âm thanh</string>
    <string name="special_offers">Ưu đãi đặc biệt</string>
    <string name="vibrate">Rung</string>
    <string name="promo_vs_discount">Khuyến mại và Giảm giá</string>
    <string name="payments">Thanh toán</string>
    <string name="cashback">Hoàn tiền</string>
    <string name="app_updates">Cập nhật ứng dụng</string>
    <string name="new_service_available">Dịch vụ mới</string>
    <string name="new_tips_available">Mẹo</string>
    <string name="input_otp">Nhập OTP</string>
    <string name="sent_otp_code">Mã đã gửi đến bạn</string>
    <string name="resend_code_otp">Gửi lại mã</string>
    <string name="send">Gửi</string>
    <string name="procedureOrder">Quy trình đơn hàng</string>
    <string name="price_original">Giá Gốc</string>
    <string name="dateDemo">0000/00/00</string>
    <string name="status">Trạng thái</string>
    <string name="myOder">Đơn hàng</string>
    <string name="waitAccept">Chờ Xác Nhận</string>
    <string name="history">Lịch Sử</string>
    <string name="one">1</string>
    <string name="howToOrder">Đơn hàng của bạn thế nào?</string>
    <string name="funRate">Vui lòng đưa ra đánh giá của bạn và đánh giá của bạn</string>

    <string name="priceDemo">0000</string>
    <string name="method">Phương thức thanh toán</string>

    <string name="price_Sell">Số tiền được giảm</string>


    <string name="confirm">Xác nhận</string>
    <!--    <string name="profile">Cấu hình</string>-->
    <string name="phone_suggest">0123456789</string>
    <string name="phone">Số điện thoại người nhận</string>
    <string name="phoneHelp">Số điện thoại:</string>
    <string name="phoneHelp1">097.567.1080</string>
    <string name="store1Detail">57,Quan Hoa,Cầu Giấy</string>
    <string name="store2Detail">29,Trần Đại Nghĩa,Hai Bà Trưng</string>
    <string name="birthDay">0000-00-00</string>
    <string name="edit_info">Sửa thông tin</string>
    <string name="add_address">Thêm địa chỉ</string>
    <string name="address_detail">Địa chỉ chi tiết</string>
    <string name="address">Địa chỉ</string>
    <string name="name">Họ và tên</string>
    <string name="White">Trắng</string>
    <string name="Black">Đen</string>
    <string name="Red">Đỏ</string>
    <string name="Blue">Xanh da trời</string>
    <string name="noData">Không có dữ liệu</string>
    <string name="logout">Đăng xuất</string>
    <string name="confirm_logout">Bạn chắc chắn muốn đăng xuất?</string>
    <string name="cancel">Hủy</string>
    <string name="saveCancel">Đã Hủy</string>
    <string name="becauseCancel">Lý do hủy</string>
    <string name="agree">Đồng ý</string>
    <string name="otp_verification">Xác thực OTP</string>
    <string name="send_otp_to_your_mail">Mã OTP sẽ gửi đến email của bạn</string>
    <string name="enter_place">Enter place</string>
    <string name="titleShoeFbee">Thông báo mới từ ShoeFbee</string>
    <string name="messageShoeFbee">Nội dung mới từ ShoeFbee</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="darkMode">Chế độ tối</string>
    <string name="enterpPlace">Enter place</string>
    <string name="contact">Thông tin liên hệ</string>
    <string name="store1">Cửa hàng số 1:</string>
    <string name="store2">Cửa hàng số 2:</string>
    <string name="description">Chi tiết</string>
    <string name="size">Kích cỡ</string>
    <string name="color">Màu sắc</string>
    <string name="quantity">Số lượng</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="total_price">Tổng tiền</string>
    <string name="check_out">Đặt hàng</string>
    <string name="review">Đánh giá</string>
    <string name="next">Tiếp theo</string>
    <string name="list_null_text">Không có sản phẩm</string>

    <string name="favorites_title">Yêu thích</string>
    <string name="cart_title">Giỏ hàng</string>

    <string name="cart_delete_title">Bạn có đồng ý xóa sản phẩm này ra khỏi giỏ hàng ?</string>
    <string name="add_cart_title">Thêm sản phẩm vào giỏ hàng thành công ?</string>
    <string name="add_shoe_to_cart_button">Tiếp tục</string>
    <string name="cancel_dialog_shoe_to_cart_button">Thoát</string>

    <string name="shipping_address">Địa chỉ nhận hàng</string>
    <string name="order_list">Sản phẩm</string>
    <string name="choose_shipping">Phương thức vận chuyển</string>
    <string name="choose_shipping_title">Chọn phương thức vận chuyển</string>
    <string name="choose_address_title">Chọn địa chỉ nhận hàng</string>
    <string name="choose_payment_title">Chọn phương thức thanh toán</string>
    <string name="promo_code">Mã giảm giá</string>
    <string name="promo_code_title">Chọn mã giảm giá</string>

    <string name="amount_text">Tổng tiền hàng</string>
    <string name="shipping_text">Tổng phí vận chuyển</string>
    <string name="discount_text">Giảm giá</string>
    <string name="total_text">Tổng thanh toán</string>
    <string name="check_out_button">Thanh toán</string>
    <string name="add_address_checkout_title">Thêm địa chỉ</string>
    <string name="default_text">Mặc định</string>
    <string name="cod_text">Thanh toán khi nhận hàng</string>
    <string name="zalo_pay_text">Thanh toán qua Zalo Pay</string>
    <string name="checkout_success">Đặt hàng thành công</string>
    <string name="checkout_success_button">Tiếp tục mua sắm</string>
    <string name="checkout_error">Thanh toán thất bại</string>
    <string name="checkout_error_button">Thanh toán lại</string>
    <string name="reset_button">Làm mới</string>
    <string name="apply_button">Áp dụng</string>
    <string name="category_text">Thể loại</string>
    <string name="price_range_text">Phạm vi giá</string>
    <string name="sort_by_text">Sắp xếp theo</string>
    <string name="rating_text">Xếp hạng</string>
    <string name="min_text">Giá thấp</string>
    <string name="max_text">Giá cao</string>
</resources>