<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".framework.presentation.ui.orders.history.detaiHistory.DetailHistoryFragment">

    <include
        android:id="@+id/headerLayout"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/headerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="1"
        android:paddingBottom="@dimen/dimen_32dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
    <ImageView
        android:id="@+id/barcodeImageView"
        android:layout_width="match_parent"
        android:layout_marginVertical="@dimen/dimen_10dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inforDetail"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:background="@drawable/bg_sold_shoe_view"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/imageEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_edit_location_alt_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            app:layout_constraintStart_toEndOf="@+id/imageEdit"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/nameUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1"
                android:textSize="@dimen/text_size_18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/numberPhoneUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/phone_suggest"
                android:maxLines="1"
                android:textSize="@dimen/text_size_16sp"
                android:layout_marginStart="@dimen/dimen_10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/nameUser"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/nameAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:ellipsize="end"
            android:hint="@string/address"
            android:maxLines="1"
            android:textStyle="bold|italic"
            android:textSize="@dimen/text_size_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageEdit"
            app:layout_constraintTop_toBottomOf="@+id/layout" />



    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycComplete"
    android:layout_marginTop="@dimen/dimen_20dp"
    android:layout_marginHorizontal="@dimen/dimen_16dp"
    app:layout_constraintTop_toBottomOf="@+id/inforDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/priceShoe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_sold_shoe_view"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_20dp"
        >


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/priceOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/price_original"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/priceDemoOriginal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/priceDemo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/priceSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/price_Sell"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceOriginal" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/priceDemoSell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/priceDemo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceDemoOriginal" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC"
            android:layout_marginVertical="@dimen/dimen_5dp"
            app:layout_constraintTop_toBottomOf="@+id/priceSell"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/price_Sell"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/totalDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:paddingVertical="@dimen/dimen_10dp"
            android:text="@string/priceDemo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:background="@drawable/bg_sold_shoe_view"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_10dp"
        >


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/method"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/methodDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/method" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dateDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/dateDemo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/methodDemo" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/dimen_10dp"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:text="@string/status"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/statusDemo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_5dp"
            android:padding="10dp"
            android:paddingVertical="@dimen/dimen_10dp"
            android:text="@string/status"
            android:textSize="@dimen/text_size_10sp"
            android:background="@drawable/bg_edt_search"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateDemo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leaveReview"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size_16sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:background="@color/color_nav_primary"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/text_size_20sp"
        android:padding="@dimen/dimen_10dp"
/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
