<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".framework.presentation.ui.forgot.forGotEmail.ForGotEmailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_background_toolbar"
        app:navigationIcon="@drawable/baseline_keyboard_backspace_24"
        app:title="@string/forgot_password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_weight="1"
        app:srcCompat="@drawable/forgot"
        tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/send_otp_to_your_mail"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutInputPhone"
        android:layout_width="match_parent"
        android:layout_marginVertical="@dimen/dimen_8dp"
        android:layout_height="@dimen/dimen_0dp"
        app:boxBackgroundMode="none"
        app:boxStrokeColor="@color/text_color_primary"
        app:boxStrokeErrorColor="@color/red"
        app:hintTextColor="@color/color_nav_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="DuplicateIds,MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_edt_search"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:hint="@string/your_email"
            android:drawableStart="@drawable/baseline_attach_email_24"
            android:drawablePadding="@dimen/dimen_10dp"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dimen_17dp"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_15sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnNextPager"
        android:layout_width="match_parent"
        android:layout_marginBottom="@dimen/dimen_45dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_15sp"
        android:backgroundTint="@color/color_nav_primary"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:text="@string/text_continue"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>