<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/dimen_24dp"
    tools:ignore="MissingConstraints">

    <ImageView
        android:id="@+id/imageEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_address"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/primary_black" />

    <TextView
        android:id="@+id/nameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintStart_toEndOf="@id/imageEdit"
        app:layout_constraintTop_toTopOf="parent"
        tools:hint="@string/name" />


    <TextView
        android:id="@+id/nameAddress"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toStartOf="@id/imageShow"
        app:layout_constraintStart_toEndOf="@+id/imageEdit"
        app:layout_constraintTop_toBottomOf="@id/nameUser"
        tools:hint="@string/phone_suggest" />

    <TextView
        android:id="@+id/detailAddress"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:maxLines="2"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintEnd_toStartOf="@id/imageShow"
        app:layout_constraintStart_toEndOf="@+id/imageEdit"
        app:layout_constraintTop_toBottomOf="@+id/nameAddress"
        tools:hint="@string/address" />

    <TextView
        android:id="@+id/numberPhoneUser"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:fontFamily="@font/poppins_regular"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:textColor="@color/primary_black"
        android:textSize="@dimen/text_size_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageShow"
        app:layout_constraintStart_toEndOf="@+id/imageEdit"
        app:layout_constraintTop_toBottomOf="@+id/detailAddress"
        tools:hint="@string/phone_suggest" />

    <ImageView
        android:id="@+id/imageShow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>